tests/ui/resolve/resolve-bad-import-prefix.stderr
error[E0432]: unresolved import `S`
  --> $DIR/resolve-bad-import-prefix.rs:11:5
   |
LL | use S::{};
   |     ^ `S` is a struct, not a module

error[E0432]: unresolved import `Nonexistent`
  --> $DIR/resolve-bad-import-prefix.rs:13:5
   |
LL | use Nonexistent::{};
   |     ^^^^^^^^^^^ use of unresolved module or unlinked crate `Nonexistent`
   |
help: you might be missing a crate named `Nonexistent`, add it to your project and import it in your code
   |
LL + extern crate Nonexistent;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
